--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/omnicard
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=Karthik22
+spring.datasource.password=canmOXpZDmlaVxWHyVzUEMrSDqVEUxUz
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.cache.type=redis
-spring.cache.redis.cache-null-values=true
-#spring.cache.redis.time-to-live=120s
